[package]
name = "jmbg"
description = "JMBG (Unique Master Citizen Number) used in former Yugoslavian countries"
version = "0.1.0"
authors = ["GrbavaCigla <alexa.ognjanovic@protonmail.com>"]
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
