[package]
name = "jmbg"
description = "JMBG (Unique Master Citizen Number) used in former Yugoslavian countries"
documentation = "https://docs.rs/jmbg/"
version = "0.1.3"
authors = ["GrbavaCigla <alexa.ognjanovic@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
readme ="README.md"
homepage = "https://github.com/GrbavaCigla/jmbg-rs"
keywords = ["JMBG", "Unique", "Citizen", "UMCN"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
